# virtual-face-cam-mac

./: .gitignore  AGENTS.md  LICENSE  README.md  image_stage.py  pyproject.toml  run-mac.command
Image Stage.app/Contents/: Info.plist
Image Stage.app/Contents/Resources/: launch.sh
Virtual Face Cam.app/Contents/: Info.plist
Virtual Face Cam.app/Contents/Resources/: launch.sh  mac_virtual_face_cam.py  requirements.txt
assets/: ImageStage.icns  VirtualFaceCam.icns
docs/: legacy-image-stage.md  signing-and-install.md  standalone-virtual-camera-plan.md
native/: README.md  project.yml
native/Shared/: VirtualFaceCamShared.swift
native/VirtualFaceCamCameraExtension/: CameraExtension.entitlements  Info.plist  VirtualFaceCamProvider.swift  main.swift
native/VirtualFaceCamHost/: CameraConfigStore.swift  ContentView.swift  Host.entitlements  Info.plist  SystemExtensionInstaller.swift  VirtualFaceCamApp.swift
native/VirtualFaceCamMac.xcodeproj/: project.pbxproj
scripts/: app_executable.sh  bootstrap_project.sh  build_app.sh  build_dev.sh  build_signed_dev.sh  open_project.sh  reset_dev_extension.sh
