[project]
name = "virtual-face-cam-mac"
version = "0.1.0"
description = "macOS browser UI for sending still images to OBS Virtual Camera"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyvirtualcam>=0.15.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]
